[package]
name = "imager-thumbline-try"
version = "1.0.0"
edition = "2021"
authors = ["ocxide"]
description = "adds a label of a given title to an image"
repository = "https://www.github.com/ocxide/imager-thumbline-try"

[dependencies]
ab_glyph = "0.2.26"
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
imageproc = "0.25.0"
